samples/_failures_safe/1761285633_88acf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26cb0767.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_26cb0767.c:192:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  192 |         for (int i
      |         ^~~
./samples/SAFE/__tmp_26cb0767.c:192:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26cb0767.c:192:9: error: expected declaration or statement at end of input
